<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.DetailOrder">


    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="5dp">

        <ImageButton
            android:id="@+id/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:src="@drawable/ic_arrow_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="Detail Order"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/edit_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:text="edit"
            android:textColor="@color/black"
            android:textSize="18dp"/>

    </Toolbar>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@color/grey" />

                <ImageView
                    android:id="@+id/promo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/logo_ventour" />

                <TextView
                    android:id="@+id/judul_paket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="40dp"
                    android:text="Umroh 9 Agustus"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="120dp"
                    android:background="@color/grey" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="4dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/custom_navbar_layanan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="43dp"
                    android:text="Transaksi Berhasil"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:layout_marginLeft="30dp"
                    android:text="tanggal transaksi"/>

                <TextView
                    android:id="@+id/tgl_transaksi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:text="27 juli 2022"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:layout_marginLeft="30dp"
                    android:text="Total Pembayaran"/>

                <TextView
                    android:id="@+id/jumlah_transaksi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:text="Rp. 27.000.000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:layout_marginLeft="30dp"
                    android:text="Kategori"/>

                <TextView
                    android:id="@+id/tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:text="@string/umroh"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="180dp"
                    android:background="@color/grey" />


            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="43dp"
                    android:text="Rincian Pembayaran"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:layout_marginLeft="30dp"
                    android:text="Metode Pembayaran"/>

                <TextView
                    android:id="@+id/pembayaran"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:text="@string/bca"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:layout_marginLeft="30dp"
                    android:text="Harga"/>

                <TextView
                    android:id="@+id/harga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:text="Rp. 27.000.000"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="180dp"
                    android:background="@color/grey" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="43dp"
                    android:text="Fasilitas"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:layout_marginLeft="30dp"
                    android:text="Penerbangan"/>

                <TextView
                    android:id="@+id/pesawat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:text="@string/saudi"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:layout_marginLeft="30dp"
                    android:text="Hotel"/>

                <TextView
                    android:id="@+id/hotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:text="@string/al_hayya"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="180dp"
                    android:background="@color/grey" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="43dp"
                    android:text="Jadwal"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:layout_marginLeft="30dp"
                    android:text="Keberangkatan"/>

                <TextView
                    android:id="@+id/tgl_keberangkatan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:text="18 Oktober 2022"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:layout_marginLeft="30dp"
                    android:text="Waktu"/>

                <TextView
                    android:id="@+id/waktu_program"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="right"
                    android:textColor="@color/black"
                    android:text="@string/hari9"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="180dp"
                    android:background="@color/grey" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="180dp"
                    android:background="@color/white" />

            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/upl_bukti_pembayaran"
        android:layout_gravity="center|bottom"
        android:background="@drawable/custom_button_submit"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:text="Upload Bukti Pembayaran"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>